submission delete, detail feature added

--- a/client/form_submission_list.html
+++ b/client/form_submission_list.html
@@ -19,7 +19,9 @@
                         </td>
                         {{/each}}
                         <td>
-                            <a href="/forms/submit/{{ formId }}/?subId={{ _id }}">Засах</a>
+                            <a href="/forms/submission/{{ formId }}/?subId={{ _id }}">Засах</a>
+                            <a href="/forms/submission/detail/{{ formId }}/?subId={{ _id }}">Харах</a>
+                            <a href="/forms/submission/delete/{{ formId }}/?subId={{ _id }}">Устгах</a>
                         </td>
                     </tr>
                 {{/each}}
