--- a/client/form_cu.html
+++ b/client/form_cu.html
@@ -36,13 +36,9 @@
                     </div>
                     <div class="panel-body">
                         <div class="field-list preview">
-                            {{# if state$isFieldsReady }}
-                                {{# autoForm schema=state$generateSchema id="formPreview" }}
-                                    {{# each state$fields }}
-                                        {{> generateField }}
-                                    {{/ each }}
-                                {{/ autoForm}}
-                            {{/ if }}
+                            {{# each state$fields }}
+                                {{> generateFieldPreview }}
+                            {{/ each }}
                         </div>
                     </div>
                 </div>
