--- a/client/base.html
+++ b/client/base.html
@@ -6,7 +6,33 @@
 </body>
 
 <template name="mainLayout">
-    <div class="container">
-        {{> render component=content}}
+    <div id="wrapper">
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="/">
+                        Form builder
+                    </a>
+                </li>
+                <li>
+                    {{> menus }}
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {{> render component=content}}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
     </div>
+    <!-- /#wrapper -->
 </template>
