some user interactions improvement

--- a/client/fields/preview.html
+++ b/client/fields/preview.html
@@ -2,7 +2,7 @@
     <div class="field preview" data-id="{{ _id }}">
         {{# if compare type "===" "seperator" }}
             <div class="seperator">
-                <span>{{ text }}</span>
+                <label>{{ text }}</label>
             </div>
         {{ else }}
         <label>
