--- a/client/forms/create_and_update.html
+++ b/client/forms/create_and_update.html
@@ -32,7 +32,7 @@
             {{# if state$object }}
                 <div class="panel panel-success">
                     <div class="panel-heading">
-                        <h3 class="panel-title">{{ state$object.title }}</h3>
+                        <h3 class="panel-title">Урьдчилан харах</h3>
                     </div>
                     <div class="panel-body">
                         <div class="field-list preview">
