--- a/client/forms/list.html
+++ b/client/forms/list.html
@@ -1,4 +1,9 @@
 <template name="formList">
+    <div>
+        <h3 class="pull-left">Формууд</h3>
+        <a href="/forms/create/" class="btn btn-success pull-right">Шинэ</a>
+    </div>
+
     <table class="table table-bordered">
         <thead>
             <tr>
