little ui improvement

--- a/client/forms/list.html
+++ b/client/forms/list.html
@@ -21,7 +21,7 @@
                         {{# if isSub }}
                             Тийм
                         {{ else }}
-                            Үгүй
+                            <label class="label label-success">Үгүй</label>
                         {{/ if }}
                     </td>
                     <td>
