--- a/front/index.html
+++ b/front/index.html
@@ -3,6 +3,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <title>Index</title>
+        <link rel="stylesheet" href="index.css" type="text/css" media="screen" charset="utf-8">
 
         <script src="bower_components/ddp.js/src/ddp.js"></script>
         <script src="bower_components/q/q.js"></script>
@@ -12,14 +13,18 @@
 
     <body>
         <script type="text/spacebars" name="main">
-            {{> form }}
+            <div id="submitForm" class="submit-form-container">
+                {{> form }}
+            </div>
         </script>
 
         <script type="text/spacebars" name="form">
             {{# if subsReady }}
-                {{# each list }}
-                    {{> formField }}
-                {{/ each }}
+                <div class="field-list">
+                    {{# each list }}
+                        {{> formField }}
+                    {{/ each }}
+                </div>
             {{ else }}
                 Уншиж байна ...
             {{/ if }}
