--- a/main/client/base.html
+++ b/main/client/base.html
@@ -6,33 +6,42 @@
 </body>
 
 <template name="mainLayout">
-    <div id="wrapper">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="/">
-                        Form builder
-                    </a>
-                </li>
-                <li>
-                    {{> menus }}
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
+    {{# if currentUser }}
+        <div id="wrapper">
+            <!-- Sidebar -->
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="sidebar-brand">
+                        <a href="/">
+                            Form builder
+                        </a>
+                    </li>
+                    <li>
+                        {{> menus }}
+                    </li>
+                    <li><a href="#" onclick="Meteor.logout()"><small>Гарах</small></a></li>
+                </ul>
+            </div>
+            <!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        {{> render component=content}}
+            <!-- Page Content -->
+            <div id="page-content-wrapper">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            {{> render component=content}}
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- /#page-content-wrapper -->
         </div>
-        <!-- /#page-content-wrapper -->
-    </div>
-    <!-- /#wrapper -->
+        <!-- /#wrapper -->
+    {{ else }}
+        {{# if loggingIn }}
+            Logging in ...
+        {{ else }}
+            {{> render component="login" }}
+        {{/if }}
+    {{/if}}
 </template>
