--- a/main/client/forms/list.html
+++ b/main/client/forms/list.html
@@ -26,6 +26,7 @@
                     </td>
                     <td>
                         <a href="/forms/update/{{ _id }}"><i class="icon-edit-1"></i>Засах</a>
+                        <a href="/forms/delete/{{ _id }}"><i class="icon-trash-4"></i>Устгах</a>
                     </td>
                 </tr>
             {{/ each }}
