--- a/main/client/forms/create_and_update.html
+++ b/main/client/forms/create_and_update.html
@@ -1,6 +1,48 @@
-<template name="formDelete">
-    <form>
-        <h1>`{{ state$object.title }}` нэртэй формыг устгах уу ?</h1>
-        <button type="submit" class="btn btn-danger">Устгах</button>
-    </form>
+<template name="formCU">
+    <div class="row">
+        <div class="col-sm-6">
+            {{# if state$object }}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Талбар засах</h3>
+                    </div>
+                    <div class="panel-body">
+                        {{> render component="fieldForm" form=state$object }}
+                    </div>
+                </div>
+            {{/ if }}
+
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Форм засах</h3>
+                </div>
+
+                <div class="panel-body">
+                    {{#autoForm schema="FormBuilder.Schemas.Form" id="formCU" type=state$af.type meteormethod=state$af.method doc=state$object }}
+                        {{> afQuickFields}}
+
+                        <button type="submit" class="btn btn-success btn-sm" disabled="{{disableButtons}}">Хадгалах</button>
+                        <a href="/forms" class="btn btn-danger btn-sm">Буцах</a>
+                    {{/autoForm}}
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6">
+            {{# if state$object }}
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">{{ state$object.title }}</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="field-list preview">
+                            {{# each state$fields }}
+                                {{> generateFieldPreview }}
+                            {{/ each }}
+                        </div>
+                    </div>
+                </div>
+            {{/ if }}
+        </div>
+    </div>
 </template>
