--- a/front/index.html
+++ b/front/index.html
@@ -31,6 +31,7 @@
 
             <p>
                 <button type="button" data-action="save">Хадгалах</button>
+                <span data-role="loader">Хадгалж байна ...</span>
             </p>
         </script>
 
