fieldsDic helper added

--- a/main/public/form.html
+++ b/main/public/form.html
@@ -1,7 +1,7 @@
 <script type="text/spacebars" name="form">
     {{# if subsReady }}
         <div class="field-list">
-            {{# each list }}
+            {{# each fields }}
                 {{> formField }}
             {{/ each }}
         </div>
