--- a/main/client/themes/_default/submission_delete_content.html
+++ b/main/client/themes/_default/submission_delete_content.html
@@ -1,15 +1,11 @@
-<template name="formSubmissionDelete">
+<template name="submissionDeleteContent">
     <h3>{{ state$object.title }}</h3>
 
     <form id="submissionDeleteForm">
         <div class="dialog-header">
             <h4>Устгах уу?</h4>
         </div>
-        {{# each state$getKeysAndValues }}
-            <p>
-                <label>{{ label }}</label>: {{ value }}
-            </p>
-        {{/ each }}
+        {{ state$object._id }}
         <div class="footer-buttons">
             <button type="submit" class="btn btn-danger">Устгах</button>
         </div>
