--- a/main/client/application/login.html
+++ b/main/client/application/login.html
@@ -2,7 +2,7 @@
     <div class="login-card">
         <h1>Login</h1><br>
         <form id="login_form">
-            <input type="text" name="email" placeholder="Email">
+            <input type="text" name="username" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
             <input type="submit" name="login" class="login login-submit" value="Login">
         </form>
