change OT theme

--- a/main/client/themes/ot/submission_list_content.html
+++ b/main/client/themes/ot/submission_list_content.html
@@ -48,7 +48,9 @@
                             {{ annualTurnover }}
                         </td>
                         <td>
-                            {{ keyEmail }}
+                            <a href="mailto:{{ keyEmail }}" target="_top">
+                                {{ keyEmail }}
+                            </a>
                         </td>
 
                         <td >
