--- a/main/client/themes/ot/layout.html
+++ b/main/client/themes/ot/layout.html
@@ -1,29 +1,14 @@
 <template name="otLayout">
-    <div id="wrapper">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="/">
-                        Form builder
-                    </a>
-                </li>
-                <li>
-                    <a href="/forms">Формууд</a>
-                    {{# each state$forms }}
-                        <a href="/forms/submission-list/{{ _id }} ">{{ title }}</a>
-                    {{/ each }}
-                </li>
-                <li><a href="#" onclick="Meteor.logout()"><small>Гарах</small></a></li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
-
+    <div class="ot-expo">
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
+                        <a href="#" class="pull-right btn btn-primary btn-sm" onclick="Meteor.logout()">Гарах</a>
+                        <h3 class="subtitle">
+                            Expo registration
+                        </h3>
                         {{> render component=state$content}}
                     </div>
                 </div>
