--- a/main/client/themes/ot/submission_delete_content.html
+++ b/main/client/themes/ot/submission_delete_content.html
@@ -3,11 +3,11 @@
 
     <form id="submissionDeleteForm">
         <div class="dialog-header">
-            <h4>Устгах уу?</h4>
+            <h4>Устгах уу? {{ state$object.companyName }}</h4>
         </div>
-        {{ state$object._id }}
         <div class="footer-buttons">
-            <button type="submit" class="btn btn-danger">Устгах</button>
+            <button type="submit" class="btn btn-danger btn-sm">Устгах</button>
+            <a href="/forms/submission-list/8XeC7LP47TcdciNnH" class="btn btn-primary btn-sm">Буцах</a>
         </div>
     </form>
 </template>
