--- a/main/client/forms/submission_detail.html
+++ b/main/client/forms/submission_detail.html
@@ -1,9 +1,13 @@
 <template name="submissionDetail">
-    {{# if hasCustomTemplate state$templateNameToSearch }}
-        {{# with getCustomTemplateName state$templateNameToSearch }}
-            {{> Template.dynamic template=name data=this }}
-        {{/ with }}
+	{{# if state$isReady }}
+	    {{# if hasCustomTemplate state$templateNameToSearch }}
+	        {{# with getCustomTemplateName state$templateNameToSearch }}
+	            {{> Template.dynamic template=name data=this }}
+	        {{/ with }}
+	    {{ else }}
+	        {{> Template.dynamic template="submissionDetailContent" data=this }}
+	    {{/ if }}
     {{ else }}
-        {{> Template.dynamic template="submissionDetailContent" data=this }}
+        Уншиж байна ...
     {{/ if }}
 </template>
