export button g haruulsan

--- a/main/client/themes/ot/submission_list_content.html
+++ b/main/client/themes/ot/submission_list_content.html
@@ -4,7 +4,7 @@
     {{# if state$isReady }}
         <div class="row">
             <div class="col-sm-12">
-                <button class="pull-right btn btn-success hide" type="button" data-role="export" data-form-id="{{ state$formObj._id }}">export</button>
+                <button class="pull-right btn btn-success" type="button" data-role="export" data-form-id="{{ state$formObj._id }}">export</button>
             </div>
         </div>
         <br>
