front end example deer zaswar

--- a/front/index.html
+++ b/front/index.html
@@ -1,9 +1,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
-        <title>Index</title>
-        <link rel="stylesheet" href="http://localhost:3000/index.css" type="text/css" media="screen" charset="utf-8">
+        <title>Front example</title>
     </head>
 
     <body>
@@ -33,14 +31,7 @@
             <label data-role="error"> <%= message %> </label>
         </script>
 
-        <script src="http://localhost:3000/dependencies/ddp.js/src/ddp.js"></script>
-        <script src="http://localhost:3000/dependencies/q/q.js"></script>
-        <script src="http://localhost:3000/dependencies/asteroid/dist/asteroid.browser.js"></script>
-        <script src="http://localhost:3000/dependencies/underscore-min.js"></script>
-        <script src="http://localhost:3000/dependencies/blaze.js"></script>
-
-        <script src="http://localhost:3000/api.js"></script>
-        <script src="http://localhost:3000/template_controllers.js"></script>
+        <script src="http://localhost:3000/FormBuilder.min.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
