front end example deer zaswar

--- a/front/index.html
+++ b/front/index.html
@@ -13,7 +13,7 @@
 
         <script type="text/spacebars" name="form">
             {{# if subsReady }}
-                <input type="text" data-schema-key="name" />
+                <input type="text" data-schema-type="input" data-schema-key="name" />
             {{ else }}
                 Уншиж байна ...
             {{/ if }}
